feat: update ARC config

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -98,13 +98,13 @@ tasks:
   upgrade-arc:
     desc: Upgrade the ARC [CLUSTER=main]
     cmds:
-      - helm -n actions-runner-system uninstall home-ops-runner || true
-      - helm -n actions-runner-system uninstall actions-runner-controller || true
-      - flux delete -s -n actions-runner-system helmrelease home-ops-runner || true
-      - flux delete -s -n actions-runner-system helmrelease actions-runner-controller || true
+      - helm --kube-context {{.CLUSTER}} -n actions-runner-system uninstall home-ops-runner-{{.CLUSTER}} || true
+      - helm --kube-context {{.CLUSTER}} -n actions-runner-system uninstall actions-runner-controller || true
+      - flux --context {{.CLUSTER}} delete -s -n actions-runner-system helmrelease home-ops-runner-{{.CLUSTER}}  || true
+      - flux --context {{.CLUSTER}} delete -s -n actions-runner-system helmrelease actions-runner-controller || true
       - sleep 5
-      - flux -n actions-runner-system reconcile ks actions-runner-controller
-      - flux -n actions-runner-system reconcile ks actions-runner-controller-runners
+      - flux --context {{.CLUSTER}} -n actions-runner-system reconcile ks actions-runner-controller
+      - flux --context {{.CLUSTER}} -n actions-runner-system reconcile ks actions-runner-controller-runners
     requires:
       vars: [CLUSTER]
     preconditions:
