fix: arc config

--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
       namespace: actions-runner-system
   values:
     githubConfigUrl: https://github.com/joryirving/home-ops
-    githubConfigSecret: *name
+    githubConfigSecret: home-ops-runner-secret
     minRunners: ${minRunners:=1}
     maxRunners: ${maxRunners:=2} #Double total nodes
     containerMode:
