--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/externalsecret.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name home-ops-runner-${CLUSTER}
+  name: &name home-ops-runner-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
