--- a/talos/utility/patches/controller/machine-features.yaml
+++ b/talos/utility/patches/controller/machine-features.yaml
@@ -9,4 +9,5 @@ machine:
       allowedRoles:
         - os:admin
       allowedKubernetesNamespaces:
+        - actions-runner-system
         - kube-tools
