--- a/kubernetes/apps/base/network/external-dns-unifi/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external-dns-unifi/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: external-dns
+  namespace: network # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://kubernetes-sigs.github.io/external-dns
@@ -22,6 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-dns
+        namespace: network
   install:
     remediation:
       retries: 3
