--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -16,6 +16,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: rook-ceph
+        namespace: rook-ceph
   install:
     remediation:
       retries: 3
