--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
@@ -1,13 +1,17 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: actions-runner-controller
+  name: gha-runner-scale-set-controller
 spec:
-  type: oci
-  interval: 30m
-  url: oci://ghcr.io/actions/actions-runner-controller-charts
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.10.1
+  url: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,13 +20,9 @@ metadata:
   name: &name actions-runner-controller
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: gha-runner-scale-set-controller
-      version: 0.10.1
-      sourceRef:
-        kind: HelmRepository
-        name: actions-runner-controller
+  chartRef:
+    kind: OCIRepository
+    name: gha-runner-scale-set-controller
   install:
     crds: CreateReplace
     remediation:
@@ -35,3 +35,15 @@ spec:
       retries: 3
   values:
     fullnameOverride: *name
+    replicaCount: 1
+  # TODO: Remove on 0.11.0
+  # Ref: https://github.com/actions/actions-runner-controller/pull/3729
+  postRenderers:
+    - kustomize:
+        patches:
+          - target:
+              kind: Deployment
+            patch: |
+              - op: replace
+                path: /spec/template/metadata/labels/app.kubernetes.io~1version
+                value: 0.10.1
