--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: itzg-charts
+  namespace: games # Required for Renovate lookups
 spec:
   interval: 2h
   url: https://itzg.github.io/minecraft-server-charts/
@@ -22,6 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: itzg-charts
+        namespace: games
   install:
     remediation:
       retries: 3
