--- a/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: itzg-charts
+        namespace: games
   install:
     remediation:
       retries: 3
