--- a/kubernetes/apps/base/kube-tools/intel-device-plugins/gpu/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/intel-device-plugins/gpu/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: intel
+        namespace: kube-tools
   install:
     remediation:
       retries: 3
