--- a/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: intel
+  namespace: kube-tools # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://intel.github.io/helm-charts
@@ -22,6 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: intel
+        namespace: kube-tools
   install:
     crds: CreateReplace
     remediation:
