--- a/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: node-feature-discovery
+  namespace: kube-tools # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
@@ -22,6 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: node-feature-discovery
+        namespace: kube-tools
   install:
     crds: CreateReplace
     remediation:
