--- a/kubernetes/apps/base/network/external-dns-cloudflare/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external-dns-cloudflare/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-dns
+        namespace: network
   install:
     crds: CreateReplace
     remediation:
