--- a/kubernetes/apps/base/network/ingress-nginx-external/helmrelease.yaml
+++ b/kubernetes/apps/base/network/ingress-nginx-external/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
+        namespace: network
   install:
     remediation:
       retries: 3
