--- a/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: wiremind
+        namespace: observability
   install:
     remediation:
       retries: 3
