--- a/kubernetes/apps/base/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: rook-ceph
+  namespace: rook-ceph # Required for Renovate lookups
 spec:
   interval: 2h
   url: https://charts.rook.io/release
@@ -23,6 +24,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: rook-ceph
+        namespace: rook-ceph
   install:
     remediation:
       retries: 3
