--- a/kubernetes/apps/utility/actions-runner-system/actions-runner-controller/ks.yaml
+++ b/kubernetes/apps/utility/actions-runner-system/actions-runner-controller/ks.yaml
@@ -40,3 +40,17 @@ spec:
   targetNamespace: actions-runner-system
   timeout: 5m
   wait: false
+  patches:
+  - patch: |-
+      apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      metadata:
+        name: home-ops-runner-utility
+      spec:
+        values:
+          template:
+            spec:
+              securityContext:
+                fsGroup: 123
+    target:
+      kind: HelmRelease
