--- a/kubernetes/apps/base/kube-system/cilium/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: cilium
-  namespace: flux-system # Required for Renovate lookups
+  namespace: kube-system # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://helm.cilium.io
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cilium
-        namespace: flux-system
+        namespace: kube-system
   install:
     remediation:
       retries: 3
