chore: update secrets

--- a/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
@@ -12,9 +12,9 @@ spec:
   gatewayClassName: cilium
   addresses:
     - type: IPAddress
-      value: ${SVC_NGINX_EXTERNAL}
+      value: ${SVC_GATEWAY_EXTERNAL}
     - type: IPAddress
-      value: ::ffff:${SVC_NGINX_EXTERNAL}
+      value: ::ffff:${SVC_GATEWAY_EXTERNAL}
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
