--- a/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/internal.yaml
@@ -12,9 +12,9 @@ spec:
   gatewayClassName: cilium
   addresses:
     - type: IPAddress
-      value: ${SVC_NGINX_INTERNAL}
+      value: ${SVC_GATEWAY_INTERNAL}
     - type: IPAddress
-      value: ::ffff:${SVC_NGINX_INTERNAL}
+      value: ::ffff:${SVC_GATEWAY_INTERNAL}
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
