--- a/kubernetes/components/clusters/main/cluster-secrets.sops.yaml
+++ b/kubernetes/components/clusters/main/cluster-secrets.sops.yaml
@@ -6,8 +6,8 @@ stringData:
     #ENC[AES256_GCM,data:4fDPDBjGJd+bDq6XWw==,iv:aCQGLarnqqB8Kn/oNB7N51s2sMVKvlRTmam5cXFBDys=,tag:QyhWt48zxgH8fJmikPMQmg==,type:comment]
     R2_ENDPOINT: ENC[AES256_GCM,data:QnBxEpAsHkELj6JVYZJblKTY9zqWXrlvFjy8M6B2bqgqQYw4Ti6ng7JnvVwwNDrMxwxBj1n86ZuD,iv:un2cmTNtnaYZg28ZY2jyfbAsxY8TPfgfTy6GIbJd8l8=,tag:+6e0RhsEXP50hiZjjt2wLA==,type:str]
     SVC_KUBE_API: ENC[AES256_GCM,data:F2TTt6O0Z1LT3Q==,iv:n9TbBm2pvSdqu+QvuiYhYIi4TQVfGeqiTzbaSFLzu+w=,tag:bcp+n1q0AFiaRevb1HAqPg==,type:str]
-    SVC_NGINX_INTERNAL: ENC[AES256_GCM,data:TyCwPUZSIIF7Xg==,iv:0pUtIxWfTzL/l1Ksw9W7/OpEoosIoj+7RBj8OkjGDkM=,tag:4xPusaS1Nc72il6Zl1M0Og==,type:str]
-    SVC_NGINX_EXTERNAL: ENC[AES256_GCM,data:yD0KlDNJdHu23A==,iv:ufbiRzNHpGdtc59e8xxEWC2s/6lfI7pKPA/WorZ+ui0=,tag:YJaK+m3aT5k9ARXCsauzWw==,type:str]
+    SVC_GATEWAY_INTERNAL: ENC[AES256_GCM,data:jSC3LRXwpxXbxQ==,iv:n33PKD124e3+Y3Pq0DtVVFGfvMVBFb+b3zrksiaiJb8=,tag:Fhmnc26vljuIrnuhkHQ17A==,type:str]
+    SVC_GATEWAY_EXTERNAL: ENC[AES256_GCM,data:TqphSeHvkTcV1Q==,iv:iglHVKisqoqaS6BHqTCxkXY7rfvsLoQjwmezdEREQJk=,tag:ULiumSMJtznN+KlKE3f5gg==,type:str]
     SVC_ABIOTIC_ADDR: ENC[AES256_GCM,data:vwvzpurDqzJaXw==,iv:/Ua885qZHEwwFvGBYsuVIknav8bJLkMriXH2ngtc18Y=,tag:XdmXKw5LSXAXmcxBTz7KYA==,type:str]
     SVC_CPGO_ADDR: ENC[AES256_GCM,data:1ZEfa153U4NV5Q==,iv:Y6TDN76pCpEGLx03ZOO/0X6Z6rKuB+Kxk8/KXmS13K0=,tag:SwpJ/0qUK+j8Eq8lUuV2aQ==,type:str]
     SVC_PLEX_ADDR: ENC[AES256_GCM,data:1xZjw3xL5OJDQw==,iv:W8H53fUTHjDmhnyyZr+jcdUOakWdw3PRjVuLO/oDnBo=,tag:q/QaiVn1iQiFWOG0UOnIQw==,type:str]
@@ -35,8 +35,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T20:21:44Z"
-    mac: ENC[AES256_GCM,data:TInSLDFUYIV5LETnNoQ1FvAjU3CfwyFA+bhhBEGnyvpLstiS6m8R05yyvSi7sqo+uG3bGaFz+WCeqJYsHz7hrf2AHySrMGXzSDl18Ac+mIS3AhSikyINU+arOosgq9fq+ib2rsv+WseYtdUxK6LRaIISYuB28Kr7zqBF7wjkM5I=,iv:R+cad6k28mF8tcrkijbqt8LzGFllDpoh4PswjVFXDQs=,tag:s09ShPu4w6+cJw7WmKahAw==,type:str]
+    lastmodified: "2025-03-12T22:03:13Z"
+    mac: ENC[AES256_GCM,data:CeZ/VcINs9xv3ZSB6m64pESLOFdkhkSPX5bQZPUHJwdt+I0ckpkIFVCoyDtYTqTANuFbbmXScD3hEMudci4/5l96uu2Nhk5mb/no7idhALGjbOSYJyLJUJleyDzBKv8gQ+gydiRftQmE0j96prAkdlLlWsRioWKLYyNowbcEqF8=,iv:Z7vlEJfif3QJEdDxQNuO56WxAseyG9SC7Ga1iVNsssc=,tag:nnibUGA1PQ7kdnVR1yA9vw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.3
+    version: 3.9.4
