--- a/kubernetes/components/clusters/test/cluster-secrets.sops.yaml
+++ b/kubernetes/components/clusters/test/cluster-secrets.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 stringData:
     #ENC[AES256_GCM,data:dY6lA6GaJBlF0Wy8zg==,iv:beMAwQv+dWIEljb20Q/nKBye7wNYWTjWT0UadBODX2o=,tag:dQhd3h1EP9u1VR+LpcIPgA==,type:comment]
     SVC_KUBE_API: ENC[AES256_GCM,data:qlvu+dA71wo1WGA=,iv:29eVLQN+5QchTs7pNiiqtzl8B5sU4HeZjUjPgax5FTE=,tag:0wfeQydACb87z8M70UcHjw==,type:str]
+    SVC_GATEWAY_INTERNAL: ENC[AES256_GCM,data:akvO8V66nfhWZio=,iv:qI3c86POX24AbeE4m73uLo6bC7UhNKypWHq64B7NubY=,tag:rqS/eWJgjYNfby0yCJa4yA==,type:str]
+    SVC_GATEWAY_EXTERNAL: ENC[AES256_GCM,data:sfCXpjZGfyhImic=,iv:FlLpo93H/nTmEjAGWZWQ4bAhVtRwRAoVpLCLy5MJc8I=,tag:DnwHKCRCECSRUYKkryGaxA==,type:str]
     #ENC[AES256_GCM,data:QnJd3cCWfaukyJH02KTvDUdK4OQf77bxzHNZBwYSNszKirQ=,iv:aKO6ksDqtdZem4LTQTLCQRockp8XMIc9alIzfVwN2xM=,tag:1mCgfgkPff5PlAdy7z7NGg==,type:comment]
 sops:
     kms: []
@@ -22,8 +24,8 @@ sops:
             eG8vOG4zOXRQVW01K1hzNnNUdUxYNDQK2r6cmnIxsIDMUHfq8p0kOcr+E/KAea4z
             tdtvD/HkOfTil0Qwld0NWRyA4DKC7AjhC0P8QlhYrNlfr5lqBqIFmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-27T22:49:23Z"
-    mac: ENC[AES256_GCM,data:5UuVqzHcTPiZBxBwVyCjb/prFgmbvrcYGUc42NgqXpn++y40J+Xm0+3yFpDkDKnPFXDLgHjMyk5oOHZOEt0XOfbFtWGZmjYwZGOXEujD5zDbvLLZgQkcEDn0WFW3fnOxTjlR8dDq/Vk2ZUlq2ovHAcuqVHu04fFKP6MoxCkLfsA=,iv:fFUTkZQBIat67VtSd2mMsRHcoutT3pdjClE1k5ukaHc=,tag:j95F+F6y+4seXg3loT8cOg==,type:str]
+    lastmodified: "2025-03-12T22:03:54Z"
+    mac: ENC[AES256_GCM,data:3ZEphXVxaeCHmKzJAbbe/dEPx+hrFF+XTR34gMucZnXmivlrZyDU2/QM6hrnsW/4QKIgOaOFWPjCCeLGLr4EGJVYE5zJoqG6ekwqwbDBIpSDjiHyQINVctbkaVGwfaEHXoneYH5IItxrNneBUked1KOoIndLWvqVGhGEjIaAPNo=,iv:lQW5meN0NzPoyw4CYQMwv/FZ2GV2eJIOYv5XDO6jXhg=,tag:TJ/GC/SRA1Md1z/tKlnimQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
