--- a/kubernetes/components/clusters/utility/cluster-secrets.sops.yaml
+++ b/kubernetes/components/clusters/utility/cluster-secrets.sops.yaml
@@ -8,8 +8,8 @@ stringData:
     ACARSDRAMA_ACARS: ENC[AES256_GCM,data:LmSp5rJvyodpGmISutdjtX29Xq5+Np/8Qg/V,iv:fnfpuUKSRe1NlOepArItZriJh1O0n5hoJvdtf70p5LE=,tag:9IfLc/Gu0tS0EK3nX2zhpQ==,type:str]
     ACARSDRAMA_VDLM2: ENC[AES256_GCM,data:J1S2UWZruEZm/uZgULDpxzaMPqyCkf2YUO9+,iv:x4jwinogeyZw+Qo/nxgLp1yQdphOUU9JwMGvrZJIKn0=,tag:n5p/0UAdoXnFtZcfk9CCXw==,type:str]
     SVC_KUBE_API: ENC[AES256_GCM,data:1xuWFAd9erkdB2k=,iv:4XbfZDQo229gVI0Kl62bic9JzHG1RH9HzMJCzlyosMg=,tag:VRbg7B8YBxVtzRW4Xoxj9w==,type:str]
-    SVC_NGINX_INTERNAL: ENC[AES256_GCM,data:ilfw6QhaTh0U7UU=,iv:eJ7/LGu8IZZjWJvDcl0DCAiavC8gf0gO8MTyQ04q3Ck=,tag:Feg8UOuivAv2gyeSh4OuCA==,type:str]
-    SVC_NGINX_EXTERNAL: ENC[AES256_GCM,data:EEnrrSfroxhmdK0=,iv:A2CoFRYWGqyWYD/825xZ62Ppl9Rd1fAdDTC1iIoCFEE=,tag:DBn3cz0JIFxlbQILnLoegw==,type:str]
+    SVC_GATEWAY_INTERNAL: ENC[AES256_GCM,data:eT65smKnpozUTkk=,iv:QOxrQrPrn6PS9qd5S/IO2SGhoCweOujySPoFMlYn2ic=,tag:8lqX1d3FjdF5r8B0Lr3hVw==,type:str]
+    SVC_GATEWAY_EXTERNAL: ENC[AES256_GCM,data:dgQdG7T53qa8564=,iv:7HIUzruorgze908cYmfw957Q2hAVP0vK2HwJQIYVkFI=,tag:h8T7qQtaKDB5wWnSiSq7QQ==,type:str]
     SVC_HOME_ASSISTANT_ADDR: ENC[AES256_GCM,data:KlS7OuwdThCf8qg=,iv:Tv51Qc+2q2jmm83YfpKwcqJCOVap9WACE7yTrpvr9h0=,tag:Sk7GdOaHC9NORZIGsxlCxg==,type:str]
     SVC_MQTT_ADDR: ENC[AES256_GCM,data:JLe9yBBRNm4rQ3Y=,iv:35bLdpiBgXNeWPMYpAY6ehGBQVeZh3HZpMMyzXeqq0I=,tag:AaH6B2ycs0ZZARXGaYuu+g==,type:str]
 sops:
@@ -27,8 +27,8 @@ sops:
             ZjkzSGxlT1R6VHNHNDVNb3hBVzNVZ3MKMtBhVS0FKr6NWqv9S6mSOhjCDIdO3uNz
             OS9Qh8tX5J/s1ZH6z3/DNLWKonA6mccm1kH7jNQe/+w4ozYxa4me9Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-21T22:28:21Z"
-    mac: ENC[AES256_GCM,data:Pu0X0R3ou47n48ky7JeoGyJ9ekluYBaOBJo6WR15FWn0P3X520TjE8t7C1sPpLl74znatMPK05p5IMjISMFUf45FdmI26thu3dCJBCBY/W0TOoMrQdCxGtX6AB38nz19xpmwsPZ81xgexz8N5XJX9ujJDs/6/UQz4lidJeQw7GE=,iv:GvLM2mpXHbzsBr4oH3jzWFFzMmnI9X6D7ZqDoON1tBo=,tag:GpBzZ5J/9I/DIxPgxBe2Rw==,type:str]
+    lastmodified: "2025-03-12T22:03:18Z"
+    mac: ENC[AES256_GCM,data:PMbHV++UD2joRSI2G+3qbFtx8H+7r/gG/3BU9REhW6DzcGBIXBa7a8F7npvCVJ8y49XG4DVo3xmEckPekiqmg5bbwRzjzgbrQZm7Nl96hY5AecnTm4TxMY3LFiTrAw/DSz1sgYbFSdwwLz8jw4cmOrIKsF1ytvPy524/r4EHU0E=,iv:wwADsYqqu+bZprJAJ/lM6SOqBNhYCDQm8G9Zac4CtGU=,tag:Cy73FeBu+HkKtrth/KLmOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
