chore: allow quad a records to resolve

--- a/kubernetes/apps/base/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/apps/base/database/crunchy-postgres/cluster/cluster.yaml
@@ -176,7 +176,7 @@ spec:
         metadata:
           annotations:
             external-dns.alpha.kubernetes.io/hostname: cpgo.${SECRET_DOMAIN}
-            lbipam.cilium.io/ips: ${SVC_CPGO_ADDR}
+            lbipam.cilium.io/ips: ${SVC_CPGO_ADDR}, ::ffff:${SVC_CPGO_ADDR}
         type: LoadBalancer
       port: 5432
       replicas: *replicas
