--- a/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_QBITTTORENT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_QBITTTORENT_ADDR}, ::ffff:${SVC_QBITTTORENT_ADDR}
         ports:
           http:
             primary: true
