--- a/kubernetes/apps/base/games/core-keeper/helmrelease.yaml
+++ b/kubernetes/apps/base/games/core-keeper/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
     #     controller: *app
     #     type: LoadBalancer
     #     annotations:
-    #       lbipam.cilium.io/ips: ${SVC_COREKEEPER_ADDR}
+    #       lbipam.cilium.io/ips: ${SVC_COREKEEPER_ADDR}, ::ffff:${SVC_COREKEEPER_ADDR}
     #     ports:
     #       game:
     #         protocol: UDP
