--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -37,5 +37,5 @@ spec:
       minecraft:
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_MINECRAFT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_MINECRAFT_ADDR}, ::ffff:${SVC_MINECRAFT_ADDR}
           external-dns.alpha.kubernetes.io/hostname: mc.${SECRET_DOMAIN}
