--- a/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
@@ -87,7 +87,7 @@ spec:
       worldSaveName: takocraft
       viewDistance: 12
       # serviceAnnotations:
-      #   lbipam.cilium.io/ips: ${SVC_TAKOCRAFT_ADDR}
+      #   lbipam.cilium.io/ips: ${SVC_TAKOCRAFT_ADDR}, ::ffff:${SVC_TAKOCRAFT_ADDR}
       # serviceType: LoadBalancer
       spigetResources:
       - 36618 #Prom Exporter
