--- a/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
         nameOverride: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_HOME_ASSISTANT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_HOME_ASSISTANT_ADDR}, ::ffff:${SVC_HOME_ASSISTANT_ADDR}
         ports:
           http:
             port: &port 8123
