--- a/kubernetes/apps/base/home-automation/mosquitto/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/mosquitto/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: mqtt.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: ${SVC_MQTT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_MQTT_ADDR}, ::ffff:${SVC_MQTT_ADDR}
         ports:
           http:
             port: 1883
