--- a/kubernetes/apps/base/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_PLEX_ADDR}
+          lbipam.cilium.io/ips: ${SVC_PLEX_ADDR}, ::ffff:${SVC_PLEX_ADDR}
         ports:
           http:
             port: *port
