--- a/kubernetes/apps/base/games/palworld/helmrelease.yaml
+++ b/kubernetes/apps/base/games/palworld/helmrelease.yaml
@@ -95,7 +95,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_PALWORLD_ADDR}
+          lbipam.cilium.io/ips: ${SVC_PALWORLD_ADDR}, ::ffff:${SVC_PALWORLD_ADDR}
         ports:
           http:
             port: 9877
