--- a/kubernetes/apps/base/games/vrising/helmrelease.yaml
+++ b/kubernetes/apps/base/games/vrising/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: ${SVC_ABIOTIC_ADDR}
+          lbipam.cilium.io/ips: ${SVC_ABIOTIC_ADDR}, ::ffff:${SVC_ABIOTIC_ADDR}
         ports:
           game:
             enabled: true
