feat: work work

--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -21,11 +21,16 @@ cni:
   exclusive: false
 dashboards:
   enabled: true
+devices: en+
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
 envoy:
-  enabled: false
+  rollOutPods: true
+gatewayAPI:
+  enabled: true
+  enableAlpn: true
+  xffNumTrustedHops: 1
 hubble:
   enabled: false
 ipam:
@@ -81,6 +86,3 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
-tls:
-   secretsNamespace:
-     create: false
