--- a/kubernetes/apps/base/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helmrelease.yaml
@@ -38,5 +38,29 @@ spec:
     - kind: ConfigMap
       name: cilium-values
   values:
+    hubble:
+      enabled: true
+      metrics:
+        enabled:
+          - dns:query
+          - drop
+          - tcp
+          - flow
+          - port-distribution
+          - icmp
+          - http
+        serviceMonitor:
+          enabled: true
+        dashboards:
+          enabled: true
+      relay:
+        enabled: true
+        rollOutPods: true
+        prometheus:
+          serviceMonitor:
+            enabled: true
+      ui:
+        enabled: true
+        rollOutPods: true
     operator:
       tolerations: []
