fix: missing files

--- a/kubernetes/apps/base/downloads/kapowarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/kapowarr/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 5656
+            port: &port 5656
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
