--- a/kubernetes/apps/base/downloads/metube/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/metube/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8081
+            port: &port 8081
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
