--- a/kubernetes/apps/base/downloads/mylar/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/mylar/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8090
+            port: &port 8090
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
