--- a/kubernetes/apps/base/media/maintainerr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/maintainerr/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 6246
+            port: &port 6246
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
