--- a/kubernetes/apps/base/media/tautulli/helmrelease.yaml
+++ b/kubernetes/apps/base/media/tautulli/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 80
+            port: *port
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
