--- a/kubernetes/apps/base/media/wizarr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/wizarr/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 5690
+            port: &port 5690
     route:
       app:
         hostnames:
