--- a/kubernetes/apps/base/self-hosted/actual/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/actual/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 5006
+            port: &port 5006
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
