--- a/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
@@ -51,7 +51,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8001
+            port: &port 8001
     route:
       app:
         hostnames: ["${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"]
