--- a/kubernetes/apps/base/self-hosted/homepage/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/homepage/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 3000
+            port: &port 3000
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
