--- a/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8000
+            port: &port 8000
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
