--- a/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
+++ b/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8409
+            port: &port 8409
     route:
       app:
         hostnames:
