--- a/kubernetes/apps/base/self-hosted/lubelog/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/helmrelease.yaml
@@ -51,7 +51,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8080
+            port: &port 8080
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
