--- a/kubernetes/apps/base/self-hosted/meshcentral/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/meshcentral/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 8080
+            port: &port 8080
     route:
       app:
         hostnames:
