--- a/kubernetes/apps/utility/home-automation/kustomization.yaml
+++ b/kubernetes/apps/utility/home-automation/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
   # - ./rtlamr2mqtt/ks.yaml ##RTL in use for ACARS
-  - ./zigbee2mqtt/ks.yaml
+  - ./zigbee/ks.yaml
