fix: cleanup spotify route

--- a/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
+++ b/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
@@ -122,10 +122,10 @@ spec:
               - path:
                   type: RegularExpression
                   value: "/api/?(.*)"
-        limits:
-          requestBodyBytes: 1048576000  # Equivalent to `proxy-body-size: 1000m`
-        timeouts:
-          request: 3600s  # Equivalent to `proxy-read-timeout: "3600"`
+        # limits:
+        #   requestBodyBytes: 1048576000  # Equivalent to `proxy-body-size: 1000m`
+        # timeouts:
+        #   request: 3600s  # Equivalent to `proxy-read-timeout: "3600"`
     persistence:
       configs:
         existingClaim: *app
