--- a/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/gateway/external.yaml
@@ -25,7 +25,7 @@ spec:
       hostname: "*.${SECRET_DOMAIN}"
       allowedRoutes:
         namespaces:
-          from: All
+          from: Same
     - name: https
       protocol: HTTPS
       port: 443
