fix: update secret ref

--- a/kubernetes/apps/base/network/cloudflare-dns/helmrelease.yaml
+++ b/kubernetes/apps/base/network/cloudflare-dns/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
       - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: &secret cloudflare-dns-secret
+            name: &secret cloudflare-dns
             key: *name
       - name: &name CF_ZONE_ID
         valueFrom:
