feat: update endpoint

--- a/kubernetes/apps/base/network/unifi-dns/helmrelease.yaml
+++ b/kubernetes/apps/base/network/unifi-dns/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
           tag: v0.4.3@sha256:1a58193c2c1985f4ce5ef4031be38d740daa4b1c54b0edbd2299524504e8d60e
         env:
           - name: UNIFI_HOST
-            value: https://unifi.internal
+            value: https://192.168.1.1
           - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
