--- a/kubernetes/apps/base/observability/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
       route:
         main:
           enabled: true
-          hostnames: ["${ALERTMANAGER_SUBDOMAIN}.devbu.io"]
+          hostnames: ["${ALERTMANAGER_SUBDOMAIN}.${SECRET_DOMAIN}"]
           parentRefs:
             - name: internal
               namespace: kube-system
@@ -136,7 +136,7 @@ spec:
       route:
         main:
           enabled: true
-          hostnames: ["${GATUS_SUBDOMAIN}.devbu.io"]
+          hostnames: ["${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"]
           parentRefs:
             - name: internal
               namespace: kube-system
