--- a/kubernetes/apps/main/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/main/kube-system/cilium/ks.yaml
@@ -48,6 +48,10 @@ spec:
       namespace: cert-manager
   interval: 1h
   path: ./kubernetes/apps/base/kube-system/cilium/gateway
+  postBuild:
+    substitute:
+      EXTERNAL_DOMAIN: external
+      INTERNAL_DOMAIN: internal
   prune: true
   sourceRef:
     kind: GitRepository
