fix: how did that copypasta fail

--- a/kubernetes/apps/base/network/cloudflare-tunnel/externalsecret.yaml
+++ b/kubernetes/apps/base/network/cloudflare-tunnel/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
     template:
       data:
         TUNNEL_TOKEN: |
+          {{ toJson (dict "a" .CLOUDFLARE_ACCOUNT_TAG "t" .${CLUSTER^^}_CLOUDFLARE_TUNNEL_ID "s" .${CLUSTER^^}_CLOUDFLARE_TUNNEL_SECRET) | b64enc }}
   dataFrom:
   - extract:
       key: cloudflare
