feat: update cilium config

--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -1,13 +1,13 @@
 ---
 autoDirectNodeRoutes: true
 bandwidthManager:
-  enabled: false
+  enabled: true
   bbr: true
 bpf:
   datapathMode: netkit
-  hostLegacyRouting: true
   masquerade: true
-  tproxy: true
+  preallocateMaps: true
+  # tproxy: true
 bgpControlPlane:
   enabled: true
 cgroup:
@@ -16,13 +16,13 @@ cgroup:
   hostRoot: /sys/fs/cgroup
 cluster:
   id: 1
-  # name: main
+  name: main
 cni:
   exclusive: false
 dashboards:
   enabled: true
 devices: en+
-enableRuntimeDeviceDetection: true
+enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
 envoy:
@@ -55,7 +55,6 @@ operator:
     enabled: true
     serviceMonitor:
       enabled: true
-  # replicas: 2
   rollOutPods: true
 prometheus:
   enabled: true
