--- a/kubernetes/apps/base/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helmrelease.yaml
@@ -38,6 +38,9 @@ spec:
     - kind: ConfigMap
       name: cilium-values
   values:
+    cluster:
+      id: 1
+      name: ${CLUSTER}
     hubble:
       enabled: true
       metrics:
