fix: update secret config

--- a/kubernetes/apps/base/network/cloudflare-tunnel/externalsecret.yaml
+++ b/kubernetes/apps/base/network/cloudflare-tunnel/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name cloudflared-tunnel
+  name: &name cloudflare-tunnel
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
