--- a/kubernetes/apps/main/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/main/network/cloudflare-tunnel/ks.yaml
@@ -14,9 +14,9 @@ spec:
   path: ./kubernetes/apps/base/network/cloudflare-tunnel
   postBuild:
     substitute:
-      REPLICAS: "2"
-      EXTERNAL_DNS: external
       CLOUDFLARED_TUNNEL_ID: 85be482d-5cf9-4ee5-a9a0-c489e3dd6188
+      EXTERNAL_DOMAIN: external
+      REPLICAS: "2"
   prune: true
   retryInterval: 2m
   sourceRef:
