--- a/kubernetes/apps/test/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/test/network/cloudflare-tunnel/ks.yaml
@@ -14,8 +14,8 @@ spec:
   path: ./kubernetes/apps/base/network/cloudflare-tunnel
   postBuild:
     substitute:
-      EXTERNAL_DNS: external-test
       CLOUDFLARED_TUNNEL_ID: 51921033-9888-483b-aa37-1572275acd11
+      EXTERNAL_DOMAIN: external-test
   prune: true
   retryInterval: 2m
   sourceRef:
