--- a/kubernetes/apps/utility/network/cloudflare-tunnel/ks.yaml
+++ b/kubernetes/apps/utility/network/cloudflare-tunnel/ks.yaml
@@ -14,8 +14,8 @@ spec:
   path: ./kubernetes/apps/base/network/cloudflare-tunnel
   postBuild:
     substitute:
-      EXTERNAL_DNS: external-utility
       CLOUDFLARED_TUNNEL_ID: 4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba
+      EXTERNAL_DOMAIN: external-utility
   prune: true
   retryInterval: 2m
   sourceRef:
