--- a/kubernetes/apps/base/network/cloudflare-tunnel/dnsendpoint.yaml
+++ b/kubernetes/apps/base/network/cloudflare-tunnel/dnsendpoint.yaml
@@ -6,6 +6,6 @@ metadata:
   name: cloudflare-tunnel
 spec:
   endpoints:
-    - dnsName: "${EXTERNAL_DNS}.${SECRET_DOMAIN}"
+    - dnsName: "${EXTERNAL_DOMAIN}.${SECRET_DOMAIN}"
       recordType: CNAME
       targets: ["${CLOUDFLARED_TUNNEL_ID}.cfargotunnel.com"]
