--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -5,6 +5,7 @@ bandwidthManager:
   bbr: true
 bpf:
   datapathMode: netkit
+  hostLegacyRouting: true
   masquerade: true
   preallocateMaps: true
   # tproxy: true
@@ -22,7 +23,6 @@ cni:
 dashboards:
   enabled: true
 devices: en+
-enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
 envoy:
